implementing frame buffer

--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -29,5 +29,11 @@ Pos=1474,275
 Size=310,247
 Collapsed=0
 
+[Window][Test]
+ViewportPos=955,248
+ViewportId=0x784DD132
+Size=1207,562
+Collapsed=0
+
 [Docking][Data]
 
