--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -22,6 +22,7 @@ DockId=0x8B93E3BD,0
 Pos=0,0
 Size=1280,720
 Collapsed=0
+DockId=0x8B93E3BD,0
 
 [Window][ллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллj⌠│Рлллллллллллллллллллллллллллллллл]
 Size=1280,720
@@ -1356,5 +1357,5 @@ Size=1280,720
 Collapsed=0
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=86,109 Size=1280,720 CentralNode=1 Selected=0xA27662A8
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=164,187 Size=1280,720 CentralNode=1 Selected=0xA27662A8
 
