--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -16,13 +16,13 @@ Collapsed=0
 [Window][Test]
 Size=1280,720
 Collapsed=0
-DockId=0x8B93E3BD,0
+DockId=0x00000001,0
 
 [Window][main]
 Pos=0,0
 Size=1280,720
 Collapsed=0
-DockId=0x8B93E3BD,0
+DockId=0x00000001,0
 
 [Window][ллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллj⌠│Рлллллллллллллллллллллллллллллллл]
 Size=1280,720
@@ -1356,6 +1356,14 @@ Collapsed=0
 Size=1280,720
 Collapsed=0
 
+[Window][Window Resize Button]
+Pos=902,0
+Size=378,203
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=164,187 Size=1280,720 CentralNode=1 Selected=0xA27662A8
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=242,265 Size=1280,720 Split=X Selected=0xA27662A8
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=900,1061 CentralNode=1 Selected=0xA27662A8
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=378,1061 Selected=0xAA2E935E
 
