Refactoring camera. Adding camera aspect ratio system

--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -1,10 +1,11 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1280,720
+Size=275,801
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=1118,386
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -20,7 +21,7 @@ DockId=0x00000001,0
 
 [Window][main]
 Pos=0,0
-Size=1280,720
+Size=275,801
 Collapsed=0
 DockId=0x00000001,0
 
@@ -1363,7 +1364,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=242,265 Size=1280,720 Split=X Selected=0xA27662A8
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=215,190 Size=275,801 Split=X Selected=0xA27662A8
   DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=900,1061 CentralNode=1 Selected=0xA27662A8
   DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=378,1061 Selected=0xAA2E935E
 
