--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ bin-int
 **.vcxproj
 **.vcxproj.user
 **.vcxproj.filters
-/Client/res/texture/**.png
-/Client/imgui.ini
+
+/Karem/res/texture/**.png
+/Karem/imgui.ini
