menambahkan yaml-sebagai submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,9 +15,6 @@
 [submodule "Vendor/Rahman"]
 	path = Vendor/Rahman
 	url = https://github.com/HoooMaC/Rahman.git
-[submodule "yaml-cpp"]
-	path = yaml-cpp
-	url = https://github.com/HoooMaC/yaml-cpp.git
-[submodule "Vendor/yaml-cpp"]
-	path = Vendor/yaml-cpp
+[submodule "Vendor/yaml_cpp"]
+	path = Vendor/yaml_cpp
 	url = https://github.com/HoooMaC/yaml-cpp.git
